--- a/chats.html
+++ b/chats.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- icon -->
     <script src="https://kit.fontawesome.com/75f55f0a8e.js" crossorigin="anonymous"></script>
-    <title>Friends - KokoaTalk</title>
+    <title>Chats - KokoaTalk</title>
 </head>
 <body>
     <div class="status-bar">   
@@ -26,10 +26,13 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
+        <h1 class="screen-header__title">Chats</h1>
         <div class="screen-header__icons">
             <span>
                 <a class="screen-header__link" href="#"><i class="fas fa-search fa-lg"></i></a>
+            </span>
+            <span>
+                <a class="screen-header__link" href="#"><i class="far fa-comment-dots fa-lg"></i></a>
             </span>
             <span>
                 <a class="screen-header__link" href="https://open.spotify.com/"><i class="fas fa-music fa-lg"></i></a>
@@ -40,107 +43,83 @@
         </div>
     </header>
 
-    <a id="friends-display-link">
-        <i class="fas fa-info-circle"></i>
-        Friends' Name Display
-        <i class="fas fa-chevron-right fa-xs"></i>
-    </a>
-
-    <main class="friends-screen">
+    <main class="main-screen">
         <a href="chat_heeya.html">
-            <div class="user-component">
+            <div class="user-component user-component-friends">
                 <div class="user-component__column">
-                    <img src="profile.jpeg" class="user-component__avatar user-component__avatar--xl">
+                    <img src="profile.jpeg" class="user-component__avatar">
                     <div class="user-component__text">
                         <h4 class="user-component__title">Heeya</h4>
-                        <h6 class="user-component__subtitle">Don't forget to code your dream~ 😜</h6>
+                        <h6 class="user-component__subtitle">🥑 My Plans for Summer Vacation 🥑</h6>
                     </div>
                 </div>
-                <div class="user-component__column"></div>
+                <div class="user-component__column">
+                    <span class="user-component__time">22:23</span>
+                    <div>&nbsp</div>
+                </div>
             </div>
         </a>
 
-        <div class="friends-screen__channel">
-            <div class="friends-screen__channel-header">
-                <span>Channel</span>
-                <i class="fas fa-chevron-up fa-xs"></i>
-            </div>
-        </div>
-
-        <div class="user-component">
-            <div class="user-component__column">
-                <img src="profile.jpeg" class="user-component__avatar user-component__avatar--sm">
-                <div class="user-component__text">
-                    <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-                </div>
-            </div>
-            <div class="user-component__column">
-                <div>
-                    <span>2</span>
-                    <i class="fas fa-chevron-right fa-xs"></i>
-                </div>
-            </div>
-        </div>
-
-        <div class="friends-screen__channel">
-            <div class="friends-screen__channel-header">
-                <span>Friends 3</span>
-                <i class="fas fa-chevron-up fa-xs"></i>
-            </div>
-        </div>
-
-        <div class="user-component-friends">
-            <a href="chat_baby.html">
+        <a href="chat_baby.html">
+            <div class="user-component user-component-friends">
                 <div class="user-component__column">
-                    <img src="http://weekly.chosun.com/up_fd/wc_news/2614/bimg_org/2614_60.jpg" class="user-component__avatar user-component__avatar--sm">
+                    <img src="http://weekly.chosun.com/up_fd/wc_news/2614/bimg_org/2614_60.jpg" class="user-component__avatar">
                     <div class="user-component__text">
                         <h4 class="user-component__title user-component__title--not-bold">Baby 😘😘</h4>
-                        <h6 class="user-component__subtitle">Let's go get it! 🌊🌊🏄🏼‍♂️🏄🏼 ☀️☀️</h6>
+                        <h6 class="user-component__subtitle">Babe, What's up?</h6>
                     </div>
                 </div>
-                <div class="user-component__column"></div>
-            </a>
-        </div>
-
-        <div class="user-component-friends">
-            <a href="chat_nico.html">
                 <div class="user-component__column">
-                    <img src="https://avatars.githubusercontent.com/u/3612017?v=4" class="user-component__avatar user-component__avatar--sm">
+                    <span class="user-component__time">11:11</span>
+                    <div class="badge">9</div>
+                </div>
+            </div>
+        </a>
+
+        <a href="chat_nico.html">
+            <div class="user-component user-component-friends">   
+                <div class="user-component__column">
+                    <img src="https://avatars.githubusercontent.com/u/3612017?v=4" class="user-component__avatar">
                     <div class="user-component__text">
                         <h4 class="user-component__title user-component__title--not-bold">Coding Mento Nico</h4>
-                        <h6 class="user-component__subtitle">☀️⛱😎</h6>
+                        <h6 class="user-component__subtitle">Oye, Heeya. Necesito tu ayuda.</h6>
                     </div>
                 </div>
-                <div class="user-component__column"></div>
-            </a>
-        </div>
-        
-
-        <div class="user-component-friends">
-            <a href="chat_rafa.html">
                 <div class="user-component__column">
-                    <img src="https://www.pronto.es/uploads/s1/28/68/80/2/rafa-nadal-35-cumple.jpeg" class="user-component__avatar user-component__avatar--sm">
+                    <span class="user-component__time">16:20</span>
+                    <div class="badge">1</div>
+                </div>
+            </div>
+        </a>        
+
+        <a href="chat_rafa.html">
+           <div class="user-component user-component-friends">
+                <div class="user-component__column">
+                    <img src="https://www.pronto.es/uploads/s1/28/68/80/2/rafa-nadal-35-cumple.jpeg" class="user-component__avatar">
                     <div class="user-component__text">
                         <h4 class="user-component__title user-component__title--not-bold">Tennis Coach Rafa</h4>
-                        <h6 class="user-component__subtitle">🎾 Vamos 🎾</h6>
+                        <h6 class="user-component__subtitle">¿A qué hora vas a venir? ¡Tienes practicar más hoy!</h6>
                     </div>
                 </div>
-                <div class="user-component__column"></div>
-            </a>
-        </div>
+                <div class="user-component__column">
+                    <span class="user-component__time">13:45</span>
+                    <div class="badge">4</div>
+                </div>
+            </div>
+        </a>
        
     </main>
 
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
-                <a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i>
+                <a class="nav__link" href="friends.html"><i class="far fa-user fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link"href="chats.html">
                     <span class="nav__notification badge">1</span>
-                    <i class="far fa-comment fa-2x"></i>
+                    <i class="fas fa-comment fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
