Updated find & more screens

--- a/chats.html
+++ b/chats.html
@@ -38,7 +38,7 @@
                 <a class="screen-header__link" href="https://open.spotify.com/"><i class="fas fa-music fa-lg"></i></a>
             </span>
             <span>
-                <a class="screen-header__link" href="#"><i class="fas fa-cog fa-lg"></i></a>
+                <a class="screen-header__link" href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
             </span> 
         </div>
     </header>
@@ -61,20 +61,20 @@
         </a>
 
         <a href="chat_baby.html">
-            <div class="user-component user-component-friends">
+            <div class="user-component user-component-friends">   
                 <div class="user-component__column">
                     <img src="http://weekly.chosun.com/up_fd/wc_news/2614/bimg_org/2614_60.jpg" class="user-component__avatar">
                     <div class="user-component__text">
                         <h4 class="user-component__title user-component__title--not-bold">Baby 😘😘</h4>
-                        <h6 class="user-component__subtitle">Babe, What's up?</h6>
+                        <h6 class="user-component__subtitle">Baby, What's up?</h6>
                     </div>
                 </div>
                 <div class="user-component__column">
-                    <span class="user-component__time">11:11</span>
-                    <div class="badge">9</div>
+                    <span class="user-component__time">12:22</span>
+                    <div class="user-component__notification badge">9</div>
                 </div>
             </div>
-        </a>
+        </a>        
 
         <a href="chat_nico.html">
             <div class="user-component user-component-friends">   
@@ -87,7 +87,7 @@
                 </div>
                 <div class="user-component__column">
                     <span class="user-component__time">16:20</span>
-                    <div class="badge">1</div>
+                    <div class="user-component__notification badge">1</div>
                 </div>
             </div>
         </a>        
@@ -103,7 +103,7 @@
                 </div>
                 <div class="user-component__column">
                     <span class="user-component__time">13:45</span>
-                    <div class="badge">4</div>
+                    <div class="user-component__notification badge">4</div>
                 </div>
             </div>
         </a>
@@ -117,18 +117,18 @@
                 </a>
             </li>
             <li class="nav__btn">
-                <a class="nav__link"href="chats.html">
-                    <span class="nav__notification badge">1</span>
+                <a class="nav__link" href="chats.html">
+                    <span class="nav__notification badge">14</span>
                     <i class="fas fa-comment fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
-                <a class="nav__link"href="find.html"><i class="fas fa-search fa-2x"></i>
+                <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
-                <a class="nav__link"href="more.html">
-                    <span class="nav__setting">&nbsp</span>
+                <a class="nav__link" href="more.html">
+                    <span class="badge nav__setting">&nbsp</span>
                     <i class="fas fa-ellipsis-h fa-2x"></i>
                 </a>
             </li>
