--- a/find.html
+++ b/find.html
@@ -32,28 +32,28 @@
                 <a class="screen-header__link" href="#"><i class="fas fa-search fa-lg"></i></a>
             </span>
             <span>
-                <a class="screen-header__link" href="#">
+                <a class="screen-header__link" href="settings.html">
                     <i class="fas fa-cog fa-lg"></i>
-                    <!-- <span class="">&nbsp;</span> -->
+                    <span class="screen-header__notification">&nbsp;</span>
                 </a>
             </span> 
         </div>
     </header>
 
     <main class="main-screen">
-        <div class="find-icons">
-            <div class="find-icons__icon">
+        <div class="icon-row">
+            <div class="icon-row__icon">
                 <i class="fas fa-qrcode"></i>
                 <span>QR Code</span>
             </div>
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="far fa-address-book"></i>
                 <span>Add by Contacts</span>
             </div>
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="fas fa-fingerprint"></i>
                 <span>Add by ID</span></div>
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="far fa-envelope"></i>
                 <span>Invite</span>
             </div>
@@ -64,9 +64,56 @@
             <span>You have no recommended friends.</span>
         </div>
 
-        <div class="">
-            
+        <div class="open-chat">
+            <div class="open-chat__header">
+                <h4 class="open-chat__title">Open Chat</h4>
+                <span>Go to Openchat Home <i class="fas fa-chevron-right fa-xs"></i></span>
+            </div>
 
+        </div>
+
+        <div class="open-post">
+            <div class="open-post__column">
+                <h5 class="open-post__title">#CODING</h5>
+                <h6 class="open-post__hashtags">#모각코#카페코딩#Busan#developer</h6>
+                <div class="open-post__members">
+                    <img src="profile.jpeg">
+                    <span class="open-post__member-count">802 members</span>
+                    <div class="divider"></div>
+                    <span class="open-post__member-status">Active</span>
+                </div>
+            </div>
+            <div class="open-post__column">
+                <div class="open-post__photo">
+                    <img src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/202012/chris-ried-ieic5Tq8YMk-unsplas_1200x768.jpeg?bEhcYQAShJnLf0Mtu4JYq8YzICfhz2rB&size=770:433">
+                    <div class="open-post__heart-count">
+                        <i class="fas fa-heart fa-xs"></i>
+                        <span>325</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="open-post">
+            <div class="open-post__column">
+                <h5 class="open-post__title">#TENNIS</h5>
+                <h6 class="open-post__hashtags">#Tennis#sports#workout#beer#🎾</h6>
+                <div class="open-post__members">
+                    <img src="https://www.pronto.es/uploads/s1/28/68/80/2/rafa-nadal-35-cumple.jpeg">
+                    <span class="open-post__member-count">440 members</span>
+                    <div class="divider"></div>
+                    <span class="open-post__member-status">Active</span>
+                </div>
+            </div>
+            <div class="open-post__column">
+                <div class="open-post__photo">
+                    <img src="https://live-production.wcms.abc-cdn.net.au/edd2522f5c9e1c6268046630ef7e3626?impolicy=wcms_crop_resize&cropH=1318&cropW=1979&xPos=28&yPos=0&width=862&height=575">
+                    <div class="open-post__heart-count">
+                        <i class="fas fa-heart fa-xs"></i>
+                        <span>211</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
@@ -87,7 +134,7 @@
             </li>
             <li class="nav__btn">
                 <a class="nav__link"href="more.html">
-                    <span class="nav__setting">&nbsp</span>
+                    <span class="badge nav__setting">&nbsp</span>
                     <i class="fas fa-ellipsis-h fa-2x"></i>
                 </a>
             </li>
