--- a/more.html
+++ b/more.html
@@ -35,12 +35,15 @@
                 <a class="screen-header__link" href="https://open.spotify.com/"><i class="fas fa-music fa-lg"></i></a>
             </span>
             <span>
-                <a class="screen-header__link" href="#"><i class="fas fa-cog fa-lg"></i></a>
+                <a class="screen-header__link" href="settings.html">
+                    <span>&nbsp;</span>
+                    <i class="fas fa-cog fa-lg"></i>
+                </a>
             </span> 
         </div>
     </header>
 
-    <main class="friends-screen">
+    <main class="main-screen more-screen">
         <div class="user-component">
             <div class="user-component__column">
                 <img src="profile.jpeg" class="user-component__avatar user-component__avatar--xl">
@@ -53,9 +56,46 @@
                 </div>
             </div>
             <div class="user-component__column">
-                <i class=""></i>
+                <i class="far fa-comment-alt fa-2x"></i>
             </div>
         </div>
+
+        <div class="icon-row">
+            <div class="icon-row__icon">
+                <i class="far fa-calendar"></i>
+                <span>Calandar</span>
+            </div>
+            <div class="icon-row__icon">
+                <i class="far far fa-smile-beam"></i>
+                <span>Talk Drive</span>
+            </div>
+            <div class="icon-row__icon">
+                <i class="fas fa-paint-roller"></i>
+                <span>Themes</span></div>
+            <div class="icon-row__icon">
+                <i class="fas fa-file-invoice-dollar"></i>
+                <span>Account</span>
+            </div>
+        </div>
+
+        <div class="more-suggestion">
+            <h4 class="more-suggestion__title">Suggestions</h4>
+            <div class="more-suggestion__icons">
+                <div class="more-suggestion__icon">
+                    <div class="more-suggestion__icon-image"><i class="fas fa-quote-right"></i></div>
+                    <span class="more-suggestion__icon-text">Kokoa Story</span>
+                </div>
+                <div class="more-suggestion__icon">
+                    <div class="more-suggestion__icon-image"><i class="fas fa-quote-right"></i></div>
+                    <span class="more-suggestion__icon-text">Kokoa Friends</span>
+                </div>
+                <div class="more-suggestion__icon">
+                    <div class="more-suggestion__icon-image"><i class="fas fa-quote-right"></i></div>
+                    <span class="more-suggestion__icon-text">Friends Gem</span>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <nav class="nav">
@@ -65,17 +105,17 @@
                 </a>
             </li>
             <li class="nav__btn">
-                <a class="nav__link"href="chats.html">
+                <a class="nav__link" href="chats.html">
                     <i class="far fa-comment fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
-                <a class="nav__link"href="find.html"><i class="fas fa-search fa-2x"></i>
+                <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
-                <a class="nav__link"href="more.html">
-                    <span class="nav__setting">&nbsp</span>
+                <a class="nav__link" href="more.html">
+                    <span class="nav__setting badge">&nbsp</span>
                     <i class="fas fa-ellipsis-h fa-2x"></i>
                 </a>
             </li>
