--- a/friends.html
+++ b/friends.html
@@ -35,7 +35,7 @@
                 <a class="screen-header__link" href="https://open.spotify.com/"><i class="fas fa-music fa-lg"></i></a>
             </span>
             <span>
-                <a class="screen-header__link" href="#"><i class="fas fa-cog fa-lg"></i></a>
+                <a class="screen-header__link" href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
             </span> 
         </div>
     </header>
@@ -139,7 +139,7 @@
             </li>
             <li class="nav__btn">
                 <a class="nav__link"href="chats.html">
-                    <span class="nav__notification badge">1</span>
+                    <span class="nav__notification badge">14</span>
                     <i class="far fa-comment fa-2x"></i>
                 </a>
             </li>
@@ -149,7 +149,7 @@
             </li>
             <li class="nav__btn">
                 <a class="nav__link"href="more.html">
-                    <span class="nav__setting">&nbsp</span>
+                    <span class="badge nav__setting">&nbsp</span>
                     <i class="fas fa-ellipsis-h fa-2x"></i>
                 </a>
             </li>
