Update animation effects

--- a/chat_baby.html
+++ b/chat_baby.html
@@ -45,8 +45,124 @@
         <div class="chat__timestamp">
             Tueseday, June 25, 2021
         </div>
+
+        <div class="message-row">
+            <img src="http://weekly.chosun.com/up_fd/wc_news/2614/bimg_org/2614_60.jpg">
+            <div class="message-row__content">
+                <span class="message__author">Baby 😘😘</span>
+                <div class="message__info">
+                    <span class="message__bubble">Hey, babe! What're you doing?</span>
+                    <span class="message__time">21:27</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="message-row message-row--own">
+          <div class="message-row__content">
+                <div class="message__info">
+                    <span class="message__bubble">Coding! How're you?</span>
+                    <span class="message__time">21:29</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="message-row">
+            <img src="http://weekly.chosun.com/up_fd/wc_news/2614/bimg_org/2614_60.jpg">
+            <div class="message-row__content">
+                <span class="message__author">Baby 😘😘</span>
+                <div class="message__info">
+                    <span class="message__bubble">I'm doing great :)</span>
+                    <span class="message__time">21:29</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="message-row">
+            <div class="message-row__content">
+                <div class="message__info more-info">
+                    <span class="message__bubble">Babe, What do you want to do on this weekend?</span>
+                    <span class="message__time">21:30</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="message-row">
+            <div class="message-row__content">
+                <div class="message__info more-info">
+                    <span class="message__bubble">Let me know if you have any plans.</span>
+                    <span class="message__time">21:30</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="message-row">
+            <div class="message-row__content">
+                <div class="message__info more-info">
+                    <span class="message__bubble">Busy?</span>
+                    <span class="message__time">22:31</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="message-row">
+            <div class="message-row__content">
+                <div class="message__info more-info">
+                    <span class="message__bubble">Babe?</span>
+                    <span class="message__time">23:00</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="message-row">
+            <div class="message-row__content">
+                <div class="message__info more-info">
+                    <span class="message__bubble">Are you home?</span>
+                    <span class="message__time">23:21</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="message-row">
+            <div class="message-row__content">
+                <div class="message__info more-info">
+                    <span class="message__bubble">Why don't you answer?</span>
+                    <span class="message__time">23:30</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="message-row">
+            <div class="message-row__content">
+                <div class="message__info more-info">
+                    <span class="message__bubble">Hmm :/</span>
+                    <span class="message__time">23:31</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="message-row">
+            <div class="message-row__content">
+                <div class="message__info more-info">
+                    <span class="message__bubble">Please call me!</span>
+                    <span class="message__time">23:49</span>
+                </div>
+            </div>
+        </div>
     </main>
 
+    <form class="reply">
+        <div class="reply__column">
+            <i class="far fa-plus-square fa-2x"></i>
+        </div>
+        <div class="reply__column">
+            <input type="text" placeholder="Write a mesaage...">
+            <i class="far fa-smile-wink fa-2x"></i>
+            <button>
+                <i class="fas fa-arrow-up fa-lg"></i>
+            </button>
+        </div>
+    </form>
+    
      <!-- current time -->
     <script>
         var dt = new Date();
