--- a/chat_heeya.html
+++ b/chat_heeya.html
@@ -45,8 +45,57 @@
         <div class="chat__timestamp">
             Tueseday, June 30, 2021
         </div>
+
+        <div class="message-row message-row--own">
+            <div class="message-row__content">
+                  <div class="message__info">
+                      <span class="message__bubble">
+                          <pre>🥑 Portfolio Plans
+
+1. Kokoa clone - HTML & CSS
+2. Chrome Application - JS
+3. Pygame - Python
+4. Airbnb clone - Python, Django, Tailwind, HTML, CSS
+5. To do list app
+</pre>
+                      </span>
+                      <span class="message__time">21:29</span>
+                  </div>
+              </div>
+          </div>
+
+          <div class="message-row message-row--own">
+            <div class="message-row__content">
+                  <div class="message__info more-info">
+                      <span class="message__bubble">
+                          <pre>🥑 My Plans for Summer Vacation 🥑
+
+1. Hawaii?
+2. Greece?
+3. Korea?
+4. Just chill at home?
+5. Idk
+</pre>
+                      </span>
+                      <span class="message__time">21:29</span>
+                  </div>
+              </div>
+          </div>
     </main>
 
+    <form class="reply">
+        <div class="reply__column">
+            <i class="far fa-plus-square fa-2x"></i>
+        </div>
+        <div class="reply__column">
+            <input type="text" placeholder="Write a mesaage...">
+            <i class="far fa-smile-wink fa-2x"></i>
+            <button>
+                <i class="fas fa-arrow-up fa-lg"></i>
+            </button>
+        </div>
+    </form>
+    
      <!-- current time -->
     <script>
         var dt = new Date();
