--- a/chat_nico.html
+++ b/chat_nico.html
@@ -45,7 +45,32 @@
         <div class="chat__timestamp">
             Tueseday, June 25, 2021
         </div>
+
+        <div class="message-row">
+            <img src="https://avatars.githubusercontent.com/u/3612017?v=4">
+            <div class="message-row__content">
+                <span class="message__author">Coding Mento Nico</span>
+                <div class="message__info">
+                    <span class="message__bubble">Oye, Heeya. Necesito tu ayuda.</span>
+                    <span class="message__time">16:20</span>
+                </div>
+            </div>
+        </div>
+
     </main>
+
+    <form class="reply">
+        <div class="reply__column">
+            <i class="far fa-plus-square fa-2x"></i>
+        </div>
+        <div class="reply__column">
+            <input type="text" placeholder="Write a mesaage...">
+            <i class="far fa-smile-wink fa-2x"></i>
+            <button>
+                <i class="fas fa-arrow-up fa-lg"></i>
+            </button>
+        </div>
+    </form>
 
      <!-- current time -->
     <script>
