--- a/chat_rafa.html
+++ b/chat_rafa.html
@@ -45,7 +45,64 @@
         <div class="chat__timestamp">
             Tueseday, June 25, 2021
         </div>
+
+        <div class="message-row">
+            <img src="https://www.pronto.es/uploads/s1/28/68/80/2/rafa-nadal-35-cumple.jpeg">
+            <div class="message-row__content">
+                <span class="message__author">Tennis Coach Rafa</span>
+                <div class="message__info">
+                    <span class="message__bubble">Heeya, nos vemos pronto ;)</span>
+                    <span class="message__time">21:27</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="message-row message-row--own">
+          <div class="message-row__content">
+                <div class="message__info">
+                    <span class="message__bubble">Por supuesto! Gracias :)</span>
+                    <span class="message__time">21:29</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="chat__timestamp">
+            Thursday, June 27, 2021
+        </div>
+
+        <div class="message-row">
+            <img src="https://www.pronto.es/uploads/s1/28/68/80/2/rafa-nadal-35-cumple.jpeg">
+            <div class="message-row__content">
+                <span class="message__author">Tennis Coach Rafa</span>
+                <div class="message__info">
+                    <span class="message__bubble">Hola, buenas!</span>
+                    <span class="message__time">13:01</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="message-row">
+            <div class="message-row__content">
+                <div class="message__info more-info">
+                    <span class="message__bubble">¿A qué hora vas a venir? ¡Tienes practicar más hoy!</span>
+                    <span class="message__time">13:45</span>
+                </div>
+            </div>
+        </div>
     </main>
+
+    <form class="reply">
+        <div class="reply__column">
+            <i class="far fa-plus-square fa-2x"></i>
+        </div>
+        <div class="reply__column">
+            <input type="text" placeholder="Write a mesaage...">
+            <i class="far fa-smile-wink fa-2x"></i>
+            <button>
+                <i class="fas fa-arrow-up fa-lg"></i>
+            </button>
+        </div>
+    </form>
 
      <!-- current time -->
     <script>
