--- a/chats.html
+++ b/chats.html
@@ -66,11 +66,11 @@
                     <img src="http://weekly.chosun.com/up_fd/wc_news/2614/bimg_org/2614_60.jpg" class="user-component__avatar">
                     <div class="user-component__text">
                         <h4 class="user-component__title user-component__title--not-bold">Baby 😘😘</h4>
-                        <h6 class="user-component__subtitle">Baby, What's up?</h6>
+                        <h6 class="user-component__subtitle">Please call me!</h6>
                     </div>
                 </div>
                 <div class="user-component__column">
-                    <span class="user-component__time">12:22</span>
+                    <span class="user-component__time">23:49</span>
                     <div class="user-component__notification badge">9</div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="user-component__column">
                     <span class="user-component__time">13:45</span>
-                    <div class="user-component__notification badge">4</div>
+                    <div class="user-component__notification badge">2</div>
                 </div>
             </div>
         </a>
