--- a/friends.html
+++ b/friends.html
@@ -155,7 +155,9 @@
             </li>
         </ul>
     </nav>
-   
+    <div id="splash-screen">
+        <i class="fas fa-comment"></i>
+    </div>
 
      <!-- current time -->
     <script>
