--- a/more.html
+++ b/more.html
@@ -67,7 +67,7 @@
             </div>
             <div class="icon-row__icon">
                 <i class="far far fa-smile-beam"></i>
-                <span>Talk Drive</span>
+                <span>Emoticons</span>
             </div>
             <div class="icon-row__icon">
                 <i class="fas fa-paint-roller"></i>
