--- a/more.html
+++ b/more.html
@@ -63,7 +63,7 @@
         <div class="icon-row">
             <div class="icon-row__icon">
                 <i class="far fa-calendar"></i>
-                <span>Calandar</span>
+                <span>Calendar</span>
             </div>
             <div class="icon-row__icon">
                 <i class="far far fa-smile-beam"></i>
