--- a/friends.html
+++ b/friends.html
@@ -157,6 +157,7 @@
     </nav>
     <div id="splash-screen">
         <i class="fas fa-comment"></i>
+        <!-- <i class="fas fa-heartbeat"></i> -->
     </div>
 
      <!-- current time -->
